fixing overflow

--- a/src/components/views/sections/header/Header.css
+++ b/src/components/views/sections/header/Header.css
@@ -3,7 +3,7 @@
   background: url(/src/images/website-design.jpg) no-repeat;
   background-size: cover;
   background-position: center;
-  height: 90vh;
+  height: 100vh;
 }
 
 .main-info {
