--- a/src/components/views/sections/projects/Projects.css
+++ b/src/components/views/sections/projects/Projects.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   background-color: var(--back);
+  overflow: hidden;
 }
 
 .projects-body {
