--- a/src/components/views/sections/timeline/Timeline.css
+++ b/src/components/views/sections/timeline/Timeline.css
@@ -8,6 +8,7 @@
   background-color: var(--back);
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
 .timeline-body {
